# bonsaigrid

./: .gitignore  .gitleaks.toml  CLAUDE.md  Cargo.toml  QUICKSTART.md  README.md  REQUIREMENTS.md
.githooks/: pre-commit
.github/workflows/: gitleaks.yml  rust-fmt.yml
bench/: QUICKSTART.md  README.md  benchmark-all.sh  gen_dashboard.py  gen_index.py  memtier_report.py  openloop_report.py  preflight.sh  run-all-isolated.sh  run-all.sh  run-memtier.sh  run-openloop.sh  run-ycsb.sh  run.sh  to_bmf.py  track.sh  verify-correctness.sh  ycsb_report.py
bench/deploy/: benchmark-report.html  dashboard.html  index.html  memtier.html  openloop.html  redis-vs-memcached.html  ycsb.html
bench/loadgen/: combined.json  gc.json  go.mod  go.sum  main.go  memtier-combined.json  openloop-combined.json  openloop.go  results-bonsaigrid-fair.json  results-bonsaigrid-mc.json  results-bonsaigrid.json  results-hazelcast.json  results-memcached.json  results-redis.json  smoke.json  store.go  store_hz.go  store_mc.go  store_redis.go  user.go  workload.go  workload_test.go  ycsb-combined.json
bench/ycsb/patch/: memcache_db.go  memcache_register.go
bench/ycsb/workloads/: workloada  workloadb  workloadc  workloadd  workloadf
bonsaigrid/: Cargo.toml  README.md
bonsaigrid/bench/: BASELINE.md
bonsaigrid/conformance-python/: cluster_smoke.py  queue_smoke.py  quorum_smoke.py  run_auto_failover.sh  run_cluster.sh  run_redpanda_demo.sh  run_structure_ha.sh  sql_smoke.py  structure_ha_smoke.py
bonsaigrid/crates/codecs/: Cargo.toml
bonsaigrid/crates/server/: Cargo.toml
bonsaigrid/crates/server/src/: cluster_coordinator.rs  connection.rs  entry_processor.rs  events.rs  handlers.rs  kafka.rs  lib.rs  main.rs  member_thread.rs  membership.rs  migration.rs  reactor.rs  txn.rs
bonsaigrid/crates/server/tests/: replication.rs  zero_alloc.rs
bonsaigrid/docs/: IMPLEMENTATION_PLAN.md  PARITY.md
conformance-java/: README.md  pom.xml
conformance-python/: README.md  api_smoke.py  auth_smoke.py  auto_failover_smoke.py  blocking_lock_smoke.py  bulk_smoke.py  cluster_failover_smoke.py  double_failover_smoke.py  dynamic_join_smoke.py  epic6_smoke.py  listener_smoke.py  listener_xconn_smoke.py  lock_smoke.py  nearcache_smoke.py  query_smoke.py  redpanda_demo.py  requirements.txt  run_double_failover.sh  run_dynamic_join.sh  run_failover.sh  run_quorum.sh  smoke.py  structure_ha_smoke.py  structures_smoke.py  topic_smoke.py
crates/bench/: Cargo.toml
crates/codecs/: Cargo.toml
crates/jet/: Cargo.toml
crates/jni/: Cargo.toml
crates/jni/src/: lib.rs
crates/member/: Cargo.toml
crates/persistence/: Cargo.toml
crates/protocol/: Cargo.toml
crates/query/: Cargo.toml
crates/raft/: Cargo.toml
crates/security/: Cargo.toml
crates/security/src/: config.rs  credential.rs  identity.rs  lib.rs  optable.rs  permission.rs  principal.rs  tls.rs
crates/security/tests/: ktls_roundtrip.rs
crates/serialization/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: catalog.rs  cdc.rs  cluster_coordinator.rs  entry_processor.rs  events.rs  executor.rs  handlers.rs  jdbc.rs  jobs.rs  kafka.rs  lib.rs  main.rs  member_thread.rs  membership.rs  memcache.rs  metrics.rs  migration.rs  persist_thread.rs  reactor.rs  resp.rs  sim.rs  txn.rs  wan_thread.rs
crates/server/src/memcache/: tests.rs
crates/server/src/resp/: tests.rs
crates/server/tests/: auth.rs  cdc_postgres.rs  cp2_echo.rs  jdbc_postgres.rs  kafka_roundtrip.rs  persist.rs  rbac.rs  replication.rs  tls_reactor.rs  wan_live.rs  zero_alloc.rs
crates/spsc/: Cargo.toml
crates/store/: Cargo.toml
crates/wan/: Cargo.toml
docs/: PARITY.md  ROADMAP.md  TEST_STRATEGY.md  bonsaigrid_demo_article.md  bonsaigrid_tutorial.md  hazelcast-platform-gap-roadmap.md  parity_execution_roadmap.md  quick_start.md  quick_start_cpp_linux.md  quick_start_python_linux.md  quick_start_rust_linux.md
docs/plans/: memcache-protocol.md  opportunistic-tail.md
docs/specs/: memcache-protocol.md  resp-protocol.md
tests/golden/: INDEX.md
(+141 files in other folders)
