[workspace]
resolver = "2"
members = ["crates/protocol", "crates/codecs", "crates/store", "crates/server", "crates/bench", "crates/spsc", "crates/serialization", "crates/query", "crates/member", "crates/jet", "crates/jni", "crates/security", "crates/persistence", "crates/raft"]

[workspace.package]
edition = "2021"
version = "0.0.0"
