[package]
name = "security"
edition.workspace = true
version.workspace = true

[dependencies]
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"
subtle = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = "0.2"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rustls-pemfile = "2"
libc = "0.2"

[dev-dependencies]
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
