[package]
name = "server"
edition.workspace = true
version.workspace = true

[dependencies]
protocol = { path = "../protocol" }
codecs = { path = "../codecs" }
store = { path = "../store" }
io-uring = "0.6"
libc = "0.2"

[dev-dependencies]
protocol = { path = "../protocol" }
codecs = { path = "../codecs" }
